--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ abraca (0.8.0+dfsg-1) UNRELEASED; urgency=medium
   * Drop all patches (applied upstream).
   * Patch away optimization level flags from build system.
   * Add patch for adding keywords to desktop file.
+  * Bump Standards-Version to 3.9.5.
 
  -- Daniel Svensson <dsvensson@gmail.com>  Sat, 23 Aug 2014 14:36:46 +0200
 
