--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-abraca (0.8.0+dfsg-1) UNRELEASED; urgency=medium
+abraca (0.8.0+dfsg-1) unstable; urgency=medium
 
   * Imported Upstream version 0.8.0 (Closes: #584984, #709710, #758123).
   * Bump debhelper compat to 9.
